--- a/table-checkbox-select-all/index.html
+++ b/table-checkbox-select-all/index.html
@@ -1,6 +1,6 @@
 <H1>table-checkbox-select-all</H1>
 
-<script src="https://embed.runkit.com" data-element="htmx-only"></script>
+<script src="https://embed.runkit.com" data-element-id="htmx-only"></script>
 
 <div id="htmx-only">
 console.log("testing") 
